Converted static site into vue.js app

--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,68 @@
 <!DOCTYPE html>
-<html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <meta name="title" content="Cryptocuban Social Club | First Real People Collectible">
+  <meta name="description"
+    content="Cryptocuban Social Club is the biggest NFT collection created in Cuba, to build bridges of culture, art and community. Are you ready to meet your collectible? Created by cuban artists Gabriel Guerra Bianchini and Denise Roque.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://cryptocubansocialclub.com/">
+  <meta property="og:title" content="Cryptocuban Social Club | First Real People Collectible">
+  <meta property="og:description"
+    content="Cryptocuban Social Club is the biggest NFT collection created in Cuba, to build bridges of culture, art and community. Are you ready to meet your collectible? Created by cuban artists Gabriel Guerra Bianchini and Denise Roque.">
+  <meta property="og:image" content="https://cryptocubansocialclub.com/assets/images/work/preview/Cryptocuban1.JPG">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://cryptocubansocialclub.com/">
+  <meta property="twitter:title" content="Cryptocuban Social Club | First Real People Collectible">
+  <meta property="twitter:description"
+    content="Cryptocuban Social Club is the biggest NFT collection created in Cuba, to build bridges of culture, art and community. Are you ready to meet your collectible? Created by cuban artists Gabriel Guerra Bianchini and Denise Roque.">
+  <meta property="twitter:image"
+    content="https://cryptocubansocialclub.com/assets/images/work/preview/Cryptocuban1.JPG">
+
+  <meta name="author" content="Gabriel Guerra Bianchini & Denise Roque">
+  <meta name="keywords"
+    content="Cuba, NFT, collectible, cuban, cryptocuban, nftcubart, cryptocubans, social club, gabriel guerra bianchini, denise roque, habana, havana, cubanft, real people, cubano, cryptoart, crypto, habana, bianchini, cryptoarte, latam collectible, latino, coleccionable, ethereum, blockchain, portraits, photography, cubana, pueblo de cuba, people from cuba, NFTs, Cuba nfts, nft cuba">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <!-- PAGE TITLE -->
+  <title>Cryptocuban Social Club | A collectible of real people</title>
+  <!-- FAVICON -->
+  <link rel="icon" type="image/png" href="https://cryptocubansocialclub.com/assets/images/favicon.png">
+  <!-- GOOGLE FONTS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap"
+    rel="stylesheet">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-P3CFPZTW2R"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-P3CFPZTW2R');
+  </script>
+</head>
+
+<body>
+  <noscript>
+    <strong>We're sorry but Cryptocuban Social Club doesn't work properly without JavaScript enabled.
+      Please enable it to continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
