--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,8 @@
 
     gtag('config', 'G-P3CFPZTW2R');
   </script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
 </head>
 
 <body>
